# git-fat

./: .coveragerc  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG  LICENSE  MANIFEST  Makefile  README.md  README.rst  flake.nix  git-fat  git2fat  pyproject.toml  result  run_test.py  setup.py  setup_win.cfg  setup_win.py  test-retroactive.sh  test.sh  tox.ini  updatefatstorage.py
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 4w4b4mxfhdc9lf3rsf4qqa9z8xnijbxl-source  9gyra3774fp9bdzchrvq2v4y9nia0pc3-source  mi7qabihgkjah9ypvskkhgbnnq7j3rd5-source  vjsmvxrsx3gbb1mljip2mxrkndh1w4aj-source
.github/workflows/: CI.yaml
git_fat/: __init__.py  cmdline.py  fatstores.py  git_fat.py  utils.py
git_fat/fatstores/: __init__.py  s3fatstore.py  syncbackend.py
tests/: conftest.py  docker-compose.yaml  flake8.cfg  git-fat  pylint.cfg  python  test.sh  test_cmdline.py  test_git_fat.py  test_git_fat_new.py  test_requirements.txt  test_unit.py
tests/fatstores/: test_s3fatstore.py
tests/s3/: test_cmdline.py  test_s3fatstore.py
tests/testresources/s3/: .gitattributes  a.fat  b.fat
tests/utils/: test_configparser.py  test_fatrepo.py  test_others.py
win32/: .gitignore  DEPENDENCIES  fix_whitespace.py  git-fat  git-fat.bat  git-fat_depends.bat  install_win.py  pylint.rc  run_tests_isolated.bat  run_tests_production.bat  run_tests_tox.bat  setup.bat  setup_wheel.bat  test_requirements.txt
