[tool.poetry]
name = "git-fat"
version = "0.1.0"
description = "Simple way to handle large git files without committing them to git"
authors = ["Carlos Hernandez <carlos@hrndz.ca>"]
license = "BSD-2"
readme = "README.md"
packages = [{include = "git_fat"}]

[tool.poetry.scripts]
git-fat = "git_fat.git_fat:run"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pyright = "^1.1.305"
pytest-shutil = "^1.7.0"
pytest-docker = "^1.0.1"
pytest-git = "^1.7.0"
pytest-resource-path = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
