[tool.poetry]
name = "git-fat"
version = "0.1.0"
description = "Simple way to handle large git files without committing them to git"
authors = ["Carlos Hernandez <carlos@hrndz.ca>"]
license = "BSD-2"
readme = "README.md"
packages = [{include = "git_fat"}]

[tool.poetry.scripts]
git-fat = "git_fat.git_fat:run"

[tool.poetry.dependencies]
python = "^3.10"
gitpython = "^3.1.31"
boto3 = "^1.26.126"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pyright = "^1.1.305"
pytest-shutil = "^1.7.0"
pytest-env = "^0.8.1"
pytest-git = "^1.7.0"
pytest-resource-path = "^1.3.0"
pytest-docker-compose = "^3.2.1"
requests = "^2.29.0"
tox = "^3.27.0"

[tool.pytest.ini_options]
addopts = "--docker-compose=tests/docker-compose.yaml"
env = [
    "AWS_ACCESS_KEY_ID=root",
    "AWS_SECRET_ACCESS_KEY=password",
    "AWS_DEFAULT_REGION=us-east-1",
    "AWS_USE_PATH_STYLE_ENDPOINT=true"
]

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
